<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="shuffle">Shuffle</string>
    <string name="favourites">Favourites</string>
    <string name="playlist">Playlist</string>
    <string name="total">Total Songs</string>
    <string name="worldOfMusic">World of Music</string>
    <string name="songName">Song Name</string>
    <string name="startTv">00:00</string>
    <string name="end">Loading..</string>
    <string name="repeat">Repeat</string>
    <string name="equalizer">Equalizer</string>
    <string name="timer">Timer</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="appIcon">Icon</string>
    <string name="textNav">Welcome to\nWorld of Music</string>
    <string name="feedBack">FeedBack</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="songAlbum">Song Album</string>
    <string name="min15">15 Minutes</string>
    <string name="min30">30 Minutes</string>
    <string name="min60">60 Minutes</string>
    <string name="searchView">Search View</string>
    <string name="songImg">Song Image</string>
    <string name="playListName">Playlist Name</string>
    <string name="playListDelete">Delete</string>
    <string name="userName">Your Name</string>
    <string name="remove_all">Remove All</string>
    <string name="addSong">Add</string>
    <string name="searchSong">Search Song</string>
    <string name="topicFeedback">Topic i.e. Suggestion, Error, etc.</string>
    <string name="emailFeedback">Email Address (Optional)</string>
    <string name="send">Send</string>
    <string name="setTheme">Set Theme</string>
    <string name="sortBy">Sort by</string>
    <string name="versionName">Version Name</string>

</resources>