<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_5"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/min15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_12"
            android:layout_height="@dimen/dimen_12"
            android:layout_margin="@dimen/dimen_4"
            android:contentDescription="@string/min15"
            android:src="@drawable/ic_timer"
            app:tint="?attr/themeColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_4"
            android:text="@string/min15"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_12"
            android:layout_height="@dimen/dimen_12"
            android:layout_margin="@dimen/dimen_4"
            android:contentDescription="@string/min30"
            android:src="@drawable/ic_timer"
            app:tint="?attr/themeColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_4"
            android:text="@string/min30"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/dimen_12"
            android:layout_height="@dimen/dimen_12"
            android:layout_margin="@dimen/dimen_4"
            android:contentDescription="@string/min60"
            android:src="@drawable/ic_timer"
            app:tint="?attr/themeColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/dimen_4"
            android:text="@string/min60"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18" />
    </LinearLayout>

</LinearLayout>