<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".view.SettingsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_25"
        android:layout_marginTop="@dimen/dimen_1"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/setTheme"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_30"
        android:background="@color/white"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgCoolPinkTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/cool_pink" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgCoolBlueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/cool_blue" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgCoolPurpleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/purple_500" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgCoolGreenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/cool_gray" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgCoolBlackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_circle"
            android:tint="@color/cool_darkBlue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_25"
        android:layout_marginVertical="@dimen/dimen_1"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dimen_8">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_25"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center|start"
            android:paddingStart="@dimen/dimen_3"
            android:text="@string/sortBy"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnSort"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/ic_sort"
            android:tint="?attr/themeColor" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersionName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/dimen_8"
        android:text="@string/versionName"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18" />

</LinearLayout>